@@ -1,4 +1,4 @@
-require 'net/http'
+require 'faraday'
 require 'multi_json'
 
 module Moneta
@@ -14,33 +14,31 @@ module Moneta
       # @option options [String] :host ('127.0.0.1') Couch host
       # @option options [String] :port (5984) Couch port
       # @option options [String] :db ('moneta') Couch database
-      # @option options [::Net::HTTP] :backend Use existing backend instance
+      # @option options [Faraday connection] :backend Use existing backend instance
       def initialize(options = {})
-        @backend = options[:backend] || ::Net::HTTP.start(options[:host] || '127.0.0.1',
-                                                          options[:port] || 5984)
-        @path = "/#{options[:db] || 'moneta'}/"
+        url = "http://#{options[:host] || '127.0.0.1'}:#{options[:port] || 5984}/#{options[:db] || 'moneta'}"
+        @backend = options[:backend] || ::Faraday.new(:url => url)
         create_db
       end
 
       # (see Proxy#key?)
       def key?(key, options = {})
-        response = @backend.request_head(@path + key)
-        response.code == '200'
+        @backend.head(key).status == 200
       end
 
       # (see Proxy#load)
       def load(key, options = {})
-        response = @backend.request_get(@path + key)
-        response.code == '200' ? MultiJson.load(response.body)['value'] : nil
+        response = @backend.get(key)
+        response.status == 200 ? MultiJson.load(response.body)['value'] : nil
       end
 
       # (see Proxy#store)
       def store(key, value, options = {})
-        response = @backend.request_head(@path + key)
+        response = @backend.head(key)
         doc = { 'value' => value }
-        doc['_rev'] = response['etag'][1..-2] if response.code == '200'
-        response = @backend.request_put(@path + key, MultiJson.dump(doc), 'Content-Type' => 'application/json')
-        raise "HTTP error #{response.code}" unless response.code == '201'
+        doc['_rev'] = response['etag'][1..-2] if response.status == 200
+        response = @backend.put(key, MultiJson.dump(doc), 'Content-Type' => 'application/json')
+        raise "HTTP error #{response.status}" unless response.status == 201
         value
       rescue
         tries ||= 0
@@ -49,12 +47,11 @@ module Moneta
 
       # (see Proxy#delete)
       def delete(key, options = {})
-        response = @backend.request_get(@path + key)
-        if response.code == '200'
+        response = @backend.get(key)
+        if response.status == 200
           value = MultiJson.load(response.body)['value']
-          path = "#{@path}#{key}?rev=#{response['etag'][1..-2]}"
-          response = @backend.request(::Net::HTTP::Delete.new(path))
-          raise "HTTP error #{response.code}" unless response.code == '200'
+          response = @backend.delete("#{key}?rev=#{response['etag'][1..-2]}")
+          raise "HTTP error #{response.status}" unless response.status == 200
           value
         end
       rescue
@@ -64,22 +61,16 @@ module Moneta
 
       # (see Proxy#clear)
       def clear(options = {})
-        @backend.request(::Net::HTTP::Delete.new(@path))
+        @backend.delete ''
         create_db
         self
-      end
-
-      # (see Proxy#close)
-      def close
-        @backend.finish
-        nil
       end
 
       private
 
       def create_db
-        response = @backend.request_put(@path, '')
-        raise "HTTP error #{response.code}" unless response.code == '201' || response.code == '412'
+        response = @backend.put '', ''
+        raise "HTTP error #{response.status}" unless response.status == 201 || response.status == 412
       end
     end
   end
