@@ -2,7 +2,8 @@ master
 
 * Logger: Add option :file
 * Adapters::TokyoTyrant supports both native (ruby-tokyotyrant) and pure-ruby tokyotyrant gems
-* Adapters::Couch use Net::HTTP directly instead of buggy CouchRest
+* Adapters::Couch use Faraday directly instead of buggy CouchRest
+* Adapters::RestClient use Faraday
 
 0.7.10
 
